Findbugs inefficient code
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@1044360 13f79535-47bb-0310-9956-ffa450edef68